<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/colorAccent">

    <TextView
            android:text="@string/theThings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="95dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="95dp" android:layout_marginBottom="476dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="24sp" android:textStyle="bold"
            android:textColor="#AFB3B2"/>
    <Button
            android:text="@string/basics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBasics" android:layout_marginTop="62dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="55dp"
            android:onClick="buttonClicked" android:background="@color/colorButtons"
            android:textColor="@color/colorText"/>
    <Button
            android:text="@string/null_safety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNull" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="55dp"
            android:layout_marginTop="55dp" app:layout_constraintTop_toBottomOf="@+id/btnBasics"
            android:onClick="buttonClicked" android:background="@color/colorButtons"
            android:textColor="@color/colorText"/>
    <Button
            android:text="@string/when_statements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnWhen" android:layout_marginTop="61dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="52dp" android:background="@color/colorButtons"
            android:textColor="@color/colorText"
            android:onClick="buttonClicked"/>
    <Button
            android:text="@string/lambdas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLambda" android:layout_marginTop="55dp"
            app:layout_constraintTop_toBottomOf="@+id/btnWhen" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="52dp" android:background="@color/colorButtons"
            android:textColor="@color/colorText"
            android:onClick="buttonClicked"/>
    <Button
            android:text="Exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnExercise" android:layout_marginTop="265dp"
            app:layout_constraintTop_toBottomOf="@+id/btnWhen" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="147dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="149dp" android:layout_marginBottom="47dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorButtons"
            android:textColor="@color/colorText" android:textStyle="bold" android:textAlignment="center"
            android:onClick="buttonClicked"/>

</android.support.constraint.ConstraintLayout>