<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NullSafetyActivity" android:background="@color/colorAccent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtWelcome" android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="192dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="191dp"
            android:layout_marginBottom="256dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="237dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/null_safety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="14dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="95dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="95dp" android:layout_marginBottom="473dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="24sp" android:textStyle="bold"
            android:textColor="#AFB3B2"/>
    <TextView
            android:text="@string/enter_your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="95dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="95dp"
            android:textSize="18sp" android:textStyle="bold"
            android:textColor="#AFB3B2" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/txtName"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtName"
            android:hint="@string/enter_your_name" android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="85dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="84dp" android:layout_marginBottom="62dp"
            app:layout_constraintBottom_toTopOf="@+id/txtWelcome" android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <Button
            android:text="@string/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGo" android:layout_marginTop="90dp"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="117dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="148dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="148dp" android:background="@color/colorButtons"
            android:textColor="@color/colorText"
            android:onClick="goClick"/>
</android.support.constraint.ConstraintLayout>