<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ExerciseActivity" android:background="@color/colorAccent">

    <TextView
            android:text="BMI Calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle"
            android:textColor="@color/colorText" android:textSize="24sp" android:layout_marginTop="45dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="127dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="127dp" android:layout_marginBottom="71dp"
            app:layout_constraintBottom_toTopOf="@+id/weightText"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/weightText"
            android:hint="@string/weight_ibs" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="99dp"
            android:layout_marginTop="71dp" app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            android:inputType="numberDecimal"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/heightText"
            android:hint="@string/height_inches" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="99dp" android:layout_marginBottom="432dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="61dp"
            app:layout_constraintTop_toBottomOf="@+id/weightText"/>
    <Button
            android:text="@string/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculateButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="161dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="162dp" android:layout_marginBottom="112dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorButtons"
            android:textColor="@color/colorText"
            android:onClick="CalculateClicked" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="31dp" app:layout_constraintTop_toBottomOf="@+id/bmiStatusText"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:id="@+id/bmiText" tools:text="BMI CALCULATION"
            android:textColor="@color/colorText" android:textSize="18sp"
            android:maxLines="10"
            android:layout_marginTop="146dp" app:layout_constraintTop_toBottomOf="@+id/heightText"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="128dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="128dp"
            android:layout_marginBottom="26dp" app:layout_constraintBottom_toTopOf="@+id/bmiStatusText"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:id="@+id/bmiStatusText" tools:text="BMI CALCULATION"
            android:textColor="@color/colorText" android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="128dp"
            android:maxLines="10"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/bmiText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="128dp"
            android:layout_marginBottom="46dp" app:layout_constraintBottom_toTopOf="@+id/calculateButton"/>
</android.support.constraint.ConstraintLayout>